<resources>
    <string name="app_name">Proyecto</string>
    <string name="textSigninText">Ya tienes una cuenta? <u>Ingresa aquí</u></string>
    <string name="textLoginText">No tienes cuenta? <u>Registrate aquí</u></string>
    <string name="textLoginButton">Iniciar Sesion</string>
    <string name="textSigninButton">Registrarse</string>
    <string name="textUserHint">Usuario</string>
    <string name="textPasswordHint1">Repetir Contraseña</string>
    <string name="textPasswordHint">Contraseña</string>
    <string name="textEmailHint">Email</string>
    <string name="textCyTButton">1. CyT</string>
    <string name="textAulas">2. Aulas de Ingeniería</string>
    <string name="textDepartamentoBiologia">3. Departamento de Biologia</string>
    <string name="textSalidaCalle53Button">4. Salida Calle 53</string>
    <string name="textEmptySpaces">Espacios disponibles:</string>
    <string name="textSelectButton">Seleccionar</string>
    <string name="textReleaseButton">Liberar</string>
</resources>